force-app/main/default/objects/Opportunity/fields/Account_Approved__c.field-meta.xml
<CustomField>
    <fullName>Account_Approved__c</fullName>
    <formula>TEXT(Account.Approval_Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Approved</label>
    <type>Text</type>
</CustomField>