force-app/main/default/objects/Opportunity/fields/Account_NX_Region__c.field-meta.xml
<CustomField>
    <fullName>Account_NX_Region__c</fullName>
    <formula>TEXT(Account.NX_Region__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account - NX Region</label>
    <type>Text</type>
</CustomField>