force-app/main/default/objects/Opportunity/fields/Account_Region_Area__c.field-meta.xml
<CustomField>
    <fullName>Account_Region_Area__c</fullName>
    <formula>TEXT(Account.Region_Area__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account - Region/Area</label>
    <type>Text</type>
</CustomField>