force-app/main/default/objects/Opportunity/fields/Agent_Distributor__c.field-meta.xml
<CustomField>
    <fullName>Agent_Distributor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Agent/Distributor</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <errorMessage>Please choose Distributor or OEM/EPC.</errorMessage>
        <filterItems>
            <field>Account.Account_Type__c</field>
            <operation>equals</operation>
            <value>OEM/EPC</value>
        </filterItems>
        <filterItems>
            <field>Account.Account_Type__c</field>
            <operation>equals</operation>
            <value>Distributor</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities (Agent/Distributor)</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>