force-app/main/default/objects/Opportunity/fields/Application__c.field-meta.xml
<CustomField>
    <fullName>Application__c</fullName>
    <label>PMC</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PMC_Application</valueSetName>
    </valueSet>
</CustomField>