force-app/main/default/objects/Opportunity/fields/Change_Expected_Order_Date_Extension__c.field-meta.xml
<CustomField>
    <fullName>Change_Expected_Order_Date_Extension__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Change Expected Order Date Extension</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>