force-app/main/default/objects/Opportunity/fields/ClosedDate_Before_Today__c.field-meta.xml
<CustomField>
    <fullName>ClosedDate_Before_Today__c</fullName>
    <formula>CloseDate &lt;  TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CloseDate Before Today</label>
    <type>Checkbox</type>
</CustomField>