force-app/main/default/objects/Opportunity/fields/CommercialPotential_Research__c.field-meta.xml
<CustomField>
    <fullName>CommercialPotential_Research__c</fullName>
    <description>Dependent picklist for field picklist for Pilot Goal with value Commercial or Research</description>
    <label>Commercial Potential/Research</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Pilot_Goal__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Commercial_Potential_Research</valueSetName>
    </valueSet>
</CustomField>