force-app/main/default/objects/Opportunity/fields/Commissioning_Required__c.field-meta.xml
<CustomField>
    <fullName>Commissioning_Required__c</fullName>
    <label>Commissioning Required?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>