force-app/main/default/objects/Opportunity/fields/Confirmation_Type__c.field-meta.xml
<CustomField>
    <fullName>Confirmation_Type__c</fullName>
    <label>Confirmation Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Purchase Order</fullName>
            </value>
            <value>
                <fullName>Signed Quote</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>