force-app/main/default/objects/Opportunity/fields/Contact_email__c.field-meta.xml
<CustomField>
    <fullName>Contact_email__c</fullName>
    <formula>Main_Contact__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact email</label>
    <type>Text</type>
</CustomField>