force-app/main/default/objects/Opportunity/fields/Days_between_last_and_first_closed_date__c.field-meta.xml
<CustomField>
    <fullName>Days_between_last_and_first_closed_date__c</fullName>
    <formula>Last_Expected_Order_Date_Close_Date__c - First_Expected_Order_Date_Close_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days between last and first closed date</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>