force-app/main/default/objects/Opportunity/fields/Decommissioning_required__c.field-meta.xml
<CustomField>
    <fullName>Decommissioning_required__c</fullName>
    <label>Decommissioning required?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>