force-app/main/default/objects/Opportunity/fields/End_Customer__c.field-meta.xml
<CustomField>
    <fullName>End_Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>End Customer</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.Account_Type__c</field>
            <operation>equals</operation>
            <value>End users</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities (End Customer)</relationshipLabel>
    <relationshipName>Opportunities2</relationshipName>
    <type>Lookup</type>
</CustomField>