force-app/main/default/objects/Opportunity/fields/EOL_ID__c.field-meta.xml
<CustomField>
    <fullName>EOL_ID__c</fullName>
    <externalId>true</externalId>
    <label>EOL ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>