force-app/main/default/objects/Opportunity/fields/Expected_Order_Date_Year__c.field-meta.xml
<CustomField>
    <fullName>Expected_Order_Date_Year__c</fullName>
    <formula>TEXT(YEAR(CloseDate))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expected Order Date (Year)</label>
    <type>Text</type>
</CustomField>