force-app/main/default/objects/Opportunity/fields/First_Expected_Order_Date_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Expected_Order_Date_Close_Date__c</fullName>
    <label>First Expected Order Date (Close Date)</label>
    <type>Date</type>
</CustomField>