force-app/main/default/objects/Opportunity/fields/Grand_Total_NXF__c.field-meta.xml
<CustomField>
    <fullName>Grand_Total_NXF__c</fullName>
    <label>Grand Total</label>
    <summarizedField>OpportunityLineItem.Forecasting_Price_Subtotal__c</summarizedField>
    <summaryFilterItems>
        <field>OpportunityLineItem.Quantity</field>
        <operation>greaterOrEqual</operation>
        <value>0</value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>