force-app/main/default/objects/Opportunity/fields/Helpfield_for_Opportunity_Number__c.field-meta.xml
<CustomField>
    <fullName>Helpfield_for_Opportunity_Number__c</fullName>
    <displayFormat>-NX-{000000}</displayFormat>
    <label>Helpfield for Opportunity Number</label>
    <type>AutoNumber</type>
</CustomField>