force-app/main/default/objects/Opportunity/fields/Hot_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Hot_Opportunity__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hot Opportunity</label>
    <type>Checkbox</type>
</CustomField>