force-app/main/default/objects/Opportunity/fields/How_Many_Orders__c.field-meta.xml
<CustomField>
    <fullName>How_Many_Orders__c</fullName>
    <label>How Many Orders?</label>
    <precision>17</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>