force-app/main/default/objects/Opportunity/fields/Industry_x__c.field-meta.xml
<CustomField>
    <fullName>Industry_x__c</fullName>
    <label>Industry</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Industry</valueSetName>
    </valueSet>
</CustomField>