force-app/main/default/objects/Opportunity/fields/Is_budget_quote__c.field-meta.xml
<CustomField>
    <fullName>Is_budget_quote__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>For initial price indication only</inlineHelpText>
    <label>(D) Is budget quote?</label>
    <type>Checkbox</type>
</CustomField>