force-app/main/default/objects/Opportunity/fields/Is_Pilot__c.field-meta.xml
<CustomField>
    <fullName>Is_Pilot__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checks whether this opportunity is a Pilot or not.</description>
    <inlineHelpText>Checks whether this opportunity is a Pilot or not.</inlineHelpText>
    <label>Is Pilot?</label>
    <type>Checkbox</type>
</CustomField>