force-app/main/default/objects/Opportunity/fields/Is_Rental__c.field-meta.xml
<CustomField>
    <fullName>Is_Rental__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Checkbox for whether the Opportunity is willing to Rent a NX Filtration product</inlineHelpText>
    <label>Is Rental?</label>
    <type>Checkbox</type>
</CustomField>