force-app/main/default/objects/Opportunity/fields/Last_Activity_Status_Description__c.field-meta.xml
<CustomField>
    <fullName>Last_Activity_Status_Description__c</fullName>
    <label>Last Activity - Status Description</label>
    <type>DateTime</type>
</CustomField>