force-app/main/default/objects/Opportunity/fields/Last_Change_Stage_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Change_Stage_Date__c</fullName>
    <label>Last Change Stage Date</label>
    <type>Date</type>
</CustomField>