force-app/main/default/objects/Opportunity/fields/Last_Expected_Order_Date_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Expected_Order_Date_Close_Date__c</fullName>
    <label>Last Expected Order Date (Close Date)</label>
    <type>Date</type>
</CustomField>