force-app/main/default/objects/Opportunity/fields/Linked_Pilot__c.field-meta.xml
<CustomField>
    <fullName>Linked_Pilot__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Linked Pilot</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Child Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>