force-app/main/default/objects/Opportunity/fields/Linked_Pilot_Expected_end_of_Pilot__c.field-meta.xml
<CustomField>
    <fullName>Linked_Pilot_Expected_end_of_Pilot__c</fullName>
    <formula>Linked_Pilot__r.Expected_end_date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Linked Pilot - Expected end of Pilot</label>
    <type>Date</type>
</CustomField>