force-app/main/default/objects/Opportunity/fields/Linked_Pilot_Pilot_Engineer_Responsible__c.field-meta.xml
<CustomField>
    <fullName>Linked_Pilot_Pilot_Engineer_Responsible__c</fullName>
    <formula>Linked_Pilot__r.Pilot_Engineer__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Linked Pilot - Pilot Eng. Responsible</label>
    <type>Text</type>
</CustomField>