force-app/main/default/objects/Opportunity/fields/Linked_Pilot_Pilot_Type__c.field-meta.xml
<CustomField>
    <fullName>Linked_Pilot_Pilot_Type__c</fullName>
    <formula>TEXT(Linked_Pilot__r.Pilot_type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Linked Pilot - Pilot Type</label>
    <type>Text</type>
</CustomField>