force-app/main/default/objects/Opportunity/fields/Linked_Pilot_Planning_Approved__c.field-meta.xml
<CustomField>
    <fullName>Linked_Pilot_Planning_Approved__c</fullName>
    <formula>Linked_Pilot__r.Planning_Approved_Pilot_Team__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Linked Pilot - Planning Approved</label>
    <type>Checkbox</type>
</CustomField>