force-app/main/default/objects/Opportunity/fields/Linked_Pilot_Preliminary_Commissioning__c.field-meta.xml
<CustomField>
    <fullName>Linked_Pilot_Preliminary_Commissioning__c</fullName>
    <formula>Linked_Pilot__r.Preliminary_Commissioning_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Linked Pilot - Preliminary Commissioning</label>
    <type>Date</type>
</CustomField>