force-app/main/default/objects/Opportunity/fields/Linked_Pilot_Stage_of_Pilot__c.field-meta.xml
<CustomField>
    <fullName>Linked_Pilot_Stage_of_Pilot__c</fullName>
    <formula>TEXT(Linked_Pilot__r.StageName)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Linked Pilot - Stage of Pilot</label>
    <type>Text</type>
</CustomField>