force-app/main/default/objects/Opportunity/fields/Linked_Pilot_When_is_Planning_Approved__c.field-meta.xml
<CustomField>
    <fullName>Linked_Pilot_When_is_Planning_Approved__c</fullName>
    <formula>Linked_Pilot__r.When_is_Planning_Approved__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Linked Pilot - When planning approved?</label>
    <type>Date</type>
</CustomField>