force-app/main/default/objects/Opportunity/fields/Linked_Pilot_Who_approved_planning__c.field-meta.xml
<CustomField>
    <fullName>Linked_Pilot_Who_approved_planning__c</fullName>
    <formula>Linked_Pilot__r.Who_has_Planning_Approved__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Linked Pilot - Who approved planning?</label>
    <type>Text</type>
</CustomField>