force-app/main/default/objects/Opportunity/fields/Lost_to_Party_if_lost__c.field-meta.xml
<CustomField>
    <fullName>Lost_to_Party_if_lost__c</fullName>
    <label>Lost to Party (if lost)</label>
    <length>15</length>
    <type>Text</type>
</CustomField>