force-app/main/default/objects/Opportunity/fields/Membrane__c.field-meta.xml
<CustomField>
    <fullName>Membrane__c</fullName>
    <label>Membrane</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Membrane</valueSetName>
    </valueSet>
</CustomField>