force-app/main/default/objects/Opportunity/fields/Module__c.field-meta.xml
<CustomField>
    <fullName>Module__c</fullName>
    <label>Module</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Pilot_type__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Module</valueSetName>
    </valueSet>
</CustomField>