force-app/main/default/objects/Opportunity/fields/Month_nr__c.field-meta.xml
<CustomField>
    <fullName>Month_nr__c</fullName>
    <formula>MONTH(Requested_Delivery_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Month_nr</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>