force-app/main/default/objects/Opportunity/fields/Number_of_days_open_end__c.field-meta.xml
<CustomField>
    <fullName>Number_of_days_open_end__c</fullName>
    <formula>IF(IsClosed = true, CloseDate - DATEVALUE(CreatedDate), TODAY() - DATEVALUE(CreatedDate))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Number of days open (end)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>