force-app/main/default/objects/Opportunity/fields/Number_of_days_since_last_stage_change__c.field-meta.xml
<CustomField>
    <fullName>Number_of_days_since_last_stage_change__c</fullName>
    <formula>TODAY() -  Last_Change_Stage_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Number of days since last stage change</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>