force-app/main/default/objects/Opportunity/fields/OEM_Discount__c.field-meta.xml
<CustomField>
    <fullName>OEM_Discount__c</fullName>
    <formula>Account.Discount_OEM__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OEM Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>