force-app/main/default/objects/Opportunity/fields/OEM_quotes_with_NX_Filtration_products__c.field-meta.xml
<CustomField>
    <fullName>OEM_quotes_with_NX_Filtration_products__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>OEM quotes only with NX in membrane option</inlineHelpText>
    <label>(A) OEM quotes with NX products</label>
    <type>Checkbox</type>
</CustomField>