force-app/main/default/objects/Opportunity/fields/OEM_selected_by_enduser__c.field-meta.xml
<CustomField>
    <fullName>OEM_selected_by_enduser__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>OEM is only selected, but has no order yet</inlineHelpText>
    <label>(C) OEM selected by enduser?</label>
    <type>Checkbox</type>
</CustomField>