force-app/main/default/objects/Opportunity/fields/Opportunity_number__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_number__c</fullName>
    <label>Opportunity Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>