force-app/main/default/objects/Opportunity/fields/Opportunity_number_Helper_2__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_number_Helper_2__c</fullName>
    <formula>TEXT(YEAR(TODAY()))&amp;Helpfield_for_Opportunity_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity number - help field</label>
    <type>Text</type>
</CustomField>