force-app/main/default/objects/Opportunity/fields/Opportunity_Requesteddelivdate_YearMonth__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Requesteddelivdate_YearMonth__c</fullName>
    <formula>TEXT(YEAR(Requested_Delivery_Date__c ))&amp;TEXT(MONTH(Requested_Delivery_Date__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity - RequestedDeliv YearMonth</label>
    <type>Text</type>
</CustomField>