force-app/main/default/objects/Opportunity/fields/Ownership__c.field-meta.xml
<CustomField>
    <fullName>Ownership__c</fullName>
    <label>Ownership</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Ownership</valueSetName>
    </valueSet>
</CustomField>