force-app/main/default/objects/Opportunity/fields/Parent_Opportunity_Hot__c.field-meta.xml
<CustomField>
    <fullName>Parent_Opportunity_Hot__c</fullName>
    <formula>Parent_Opportunity__r.Hot_Opportunity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Opportunity - Hot?</label>
    <type>Checkbox</type>
</CustomField>