force-app/main/default/objects/Opportunity/fields/Parent_Opportunity_ID__c.field-meta.xml
<CustomField>
    <fullName>Parent_Opportunity_ID__c</fullName>
    <formula>Parent_Opportunity__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Opportunity ID</label>
    <type>Text</type>
</CustomField>