force-app/main/default/objects/Opportunity/fields/Parent_Opportunity_PMC__c.field-meta.xml
<CustomField>
    <fullName>Parent_Opportunity_PMC__c</fullName>
    <formula>TEXT( Parent_Opportunity__r.PMC_Global_Opp__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Opportunity - PMC Global</label>
    <type>Text</type>
</CustomField>