force-app/main/default/objects/Opportunity/fields/Parent_Opportunity_Stage__c.field-meta.xml
<CustomField>
    <fullName>Parent_Opportunity_Stage__c</fullName>
    <formula>TEXT(Parent_Opportunity__r.StageName)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Opportunity - Stage</label>
    <type>Text</type>
</CustomField>