force-app/main/default/objects/Opportunity/fields/Pilot_Engineer__c.field-meta.xml
<CustomField>
    <fullName>Pilot_Engineer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pilot Engineer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities2</relationshipName>
    <type>Lookup</type>
</CustomField>