force-app/main/default/objects/Opportunity/fields/Pilot_Goal__c.field-meta.xml
<CustomField>
    <fullName>Pilot_Goal__c</fullName>
    <description>Shows what goal the goal is of the Pilot opp</description>
    <inlineHelpText>Shows what the goal is of the Pilot opportunity</inlineHelpText>
    <label>Pilot Goal</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Pilot_Goal</valueSetName>
    </valueSet>
</CustomField>