force-app/main/default/objects/Opportunity/fields/pilot_objective__c.field-meta.xml
<CustomField>
    <fullName>pilot_objective__c</fullName>
    <label>Pilot Objective</label>
    <type>TextArea</type>
</CustomField>