force-app/main/default/objects/Opportunity/fields/Pilot_Planning_Neccesarry__c.field-meta.xml
<CustomField>
    <fullName>Pilot_Planning_Neccesarry__c</fullName>
    <label>Pilot Planning Necessary</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>