force-app/main/default/objects/Opportunity/fields/Pilot_type__c.field-meta.xml
<CustomField>
    <fullName>Pilot_type__c</fullName>
    <label>Pilot type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Pilot_type</valueSetName>
    </valueSet>
</CustomField>