force-app/main/default/objects/Opportunity/fields/Planning_Approved_Pilot_Team__c.field-meta.xml
<CustomField>
    <fullName>Planning_Approved_Pilot_Team__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Planning Approved (Pilot Team)</label>
    <type>Checkbox</type>
</CustomField>