force-app/main/default/objects/Opportunity/fields/PMC_Global_Opp__c.field-meta.xml
<CustomField>
    <fullName>PMC_Global_Opp__c</fullName>
    <label>PMC - Global</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PMC</valueSetName>
    </valueSet>
</CustomField>