force-app/main/default/objects/Opportunity/fields/Preliminary_Commissioning_Date__c.field-meta.xml
<CustomField>
    <fullName>Preliminary_Commissioning_Date__c</fullName>
    <label>Preliminary Commissioning Date</label>
    <type>Date</type>
</CustomField>