force-app/main/default/objects/Opportunity/fields/probability_prediction__c.field-meta.xml
<CustomField>
    <fullName>probability_prediction__c</fullName>
    <inlineHelpText>This probability percentage is calculated based on the set of rules defined by NX Filtration management. Please refer to the documentation for explanation of the rationale.</inlineHelpText>
    <label>Probability Prediction</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>