force-app/main/default/objects/Opportunity/fields/Product_s_Quantity_History__c.field-meta.xml
<CustomField>
    <fullName>Product_s_Quantity_History__c</fullName>
    <defaultValue>0</defaultValue>
    <description>For admin. Do not delete or put it on the page layout. This field is used in the Opportunity Field History Tracking process.</description>
    <label>Product(s) Quantity History</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>