force-app/main/default/objects/Opportunity/fields/Product_s_Subtotal__c.field-meta.xml
<CustomField>
    <fullName>Product_s_Subtotal__c</fullName>
    <description>For admin. Do not delete or put it on the page layout. This field is used in the Opportunity Field History Tracking process.</description>
    <label>Product(s) Subtotal</label>
    <summarizedField>OpportunityLineItem.Subtotal__c</summarizedField>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>